--- a/css/style.css
+++ b/css/style.css
@@ -23,3 +23,14 @@ button {
   color: rgb(0, 0, 0);
   border: 2px solid #000;
 }
+
+footer {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 0.9rem;
+  padding: 1rem;
+}
+
+a {
+  color: rgb(0, 0, 0);
+}
